# groq-hs

./: .gitignore  CHANGELOG.md  README.md  groq-hs.cabal
example/: Main.hs
src/Groq/: AST.hs  Parser.hs
test/: Main.hs
